[package]
name = "cloud-web-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0" }
tera = { version = "1", default-features = false }
axum = "0.6.20"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
lambda_http = "0.8.3"
mime_guess = "2.0.4"
ureq = "2.9.0"
scraper = "0.18.1"
serde = "1.0.192"
